fixed menu layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ strong{
     .navigation > div:first-child{
        text-align:right;
     }
-    .navigation > div:first-child{
+    .navigation > div:last-child{
        text-align:left;
     }
 }
